--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   </head>
   <body id='body'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id='renderHelper'></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
