Font helper paragraph added.

--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id='renderHelper'></div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <p style='position: fixed; left: 30px; z-index: -1;'>
+      <span style='font-family: "museo", serif'>.</span>
+      <span style='font-family: "Montserrat", sans-serif'>.</span>
+      <span style='font-family: "Roboto", sans-serif'>.</span>
+      <span style='font-family: "Open Sans", sans-serif'>.</span>
+  </p>
   </body>
 </html>
