Position of text helper moved to top.

--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id='renderHelper'></div>
     <div id="root"></div>
-    <p style='position: fixed; left: 30px; z-index: -1;'>
+    <p style='position: fixed; left: 30px; top: 0px; z-index: -1;'>
       <span style='font-family: "museo", serif'>.</span>
       <span style='font-family: "Montserrat", sans-serif'>.</span>
       <span style='font-family: "Roboto", sans-serif'>.</span>
       <span style='font-family: "Open Sans", sans-serif'>.</span>
-  </p>
+    </p>
   </body>
 </html>
