canada-type-gibson font added to render helper.

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       <span style='font-family: "Montserrat", sans-serif'>.</span>
       <span style='font-family: "Roboto", sans-serif'>.</span>
       <span style='font-family: "Open Sans", sans-serif'>.</span>
+      <span style='font-family: "canada-type-gibson", sans-serif'>.</span>
       <i class="fas fa-arrow-left"></i>
     </p>
   </body>
