--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,22 @@
     
     <link rel="stylesheet" href="https://use.typekit.net/ltl3soi.css">
     <title>React App</title>
+
+    <style>
+      * {
+        font-family: 'Roboto', sans-serif;
+        font-size: 16px;
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0px;
+      }
+    </style>
+
   </head>
   <body id='body'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id='renderHelper'></div>
     <div id="root"></div>
     <p style='position: fixed; left: 30px; top: 0px; z-index: -1;'>
       <!--
