renderHelper div for html2canvas added.

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
   </head>
   <body id='body'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id='renderHelper'></div>
     <div id="root"></div>
     <p style='position: fixed; left: 30px; top: 0px; z-index: -1;'>
       <!--
