Overflow issues fixed/ .

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,10 @@
       .blur {
         filter: blur(2px);
       }
+
+      .no-scroll {
+        overflow: hidden;
+      }
     </style>
 
   </head>
