center style added.

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,15 @@
       .no-scroll {
         overflow: hidden;
       }
+
+      .center {
+        width: max-content;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+   
     </style>
 
   </head>
