--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,17 @@
         box-sizing: border-box;
       }
 
+      html {
+        height: 100%;
+      }
+
       body {
         margin: 0px;
+        height: 100%;
+      }
+
+      #root {
+        height: 100%;
       }
 
       .blur {
