Title updated to Florence

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="https://use.typekit.net/ltl3soi.css">
-    <title>React App</title>
+    <title>Florence</title>
 
     <style>
       * {
