Font awesome class for text icons added

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
       *:disabled {
         cursor: not-allowed;
       }
+
+      .font-awesome {
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+      }
    
     </style>
 
